--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "material": "^0.4.3",
+    "ng-click-outside": "^7.0.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
